Fix   on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -939,7 +939,7 @@ body {
   /* Center the graphic, but full width with padding */
   .ui-illustration {
     flex:       0 0 100%;
-    max-width:  80%;
+    max-width:  60%;
     margin:     0 auto;
   }
 
@@ -956,8 +956,8 @@ body {
   }
 
   .ui-icon img {
-    width:  40px;
-    height: 40px;
+    width:  27px;
+    height: 27px;
   }
   .icon-hotels    { top: -22px; left: 50%;  transform: translateX(-50%); }
   .icon-packages  { top: 50%; right: -80px; transform: translateY(-50%); }
